feat: Enhance project setup for Cloudflare Pages deployment
- Update .gitignore to include Cloudflare build outputs and temporary files
- Add deployment scripts in package.json for building and deploying to Cloudflare
- Revise README.md to include detailed Cloudflare Pages deployment instructions
- Modify server.ts to serve built files and handle on-the-fly TypeScript compilation
- Update public/index.html to reference the built main.js file
- Adjust workerManager.ts to use the appropriate worker file based on the environment

This commit prepares the project for seamless deployment to Cloudflare Pages, improving the development workflow and deployment process.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "serve": "python server.py",
     "build": "bun run build.ts",
     "build:watch": "bun --watch build.ts",
+    "build:cf": "bun run build-cf.ts",
+    "deploy": "bun run build-cf.ts && wrangler pages deploy dist",
     "test": "bun test"
   },
   "dependencies": {
@@ -20,7 +22,8 @@
     "typescript": "5.9.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "wrangler": "^4.28.0"
   },
   "module": "index.ts",
   "type": "module",
